mc-front-20: + company details page, * dataTable

--- a/frontend/src/assets/css/variables.css
+++ b/frontend/src/assets/css/variables.css
@@ -2,6 +2,8 @@
   --global-blue: #1976d2;
   --global-white: #ffffff;
 
+  --global-hover-blue: #1976d215;
+
   --admin-badge-color: #19d21d;
 
   --page-layout-header-margin-top: 1em;
