mc-front-21: + company update, * company controller, * error handler middleware

--- a/frontend/src/assets/css/variables.css
+++ b/frontend/src/assets/css/variables.css
@@ -1,6 +1,7 @@
 :root {
   --global-blue: #1976d2;
   --global-white: #ffffff;
+  --active-lime-color: #19d21d;
 
   --global-hover-blue: #1976d215;
 
