--- a/frontend/src/components/Header/style.module.css
+++ b/frontend/src/components/Header/style.module.css
@@ -1,6 +1,6 @@
 .header {
   height: 65px;
-  padding: 0 2em;
+  padding: 0 var(--page-layout-header-side-padding);
   display: flex;
   justify-content: space-between;
   align-items: center;
