mc-front-37: * fixed click row after sort bug, + highlight admin companies

--- a/frontend/src/assets/css/variables.css
+++ b/frontend/src/assets/css/variables.css
@@ -5,6 +5,7 @@
   --active-lime-color: #19d21d;
 
   --global-hover-blue: #1976d215;
+  --global-hover-lime: #19d21c1a;
 
   --admin-badge-color: #19d21d;
 
